<resources>
    <string name="app_name">ZEDY REAL ESTATE</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_about_us" translatable="false">AboutUsActivity</string>
    <string name="there_is_no_Inter_net">There is no network connection!</string>
    <string name="error">Error!</string>
    <string name="invalid_email_and_password">Invalid email or password</string>
    <string name="tasks">Tasks</string>
    <string name="about_us">About us</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="language">Language</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_en">English</string>
    <string name="exit">Exit</string>
    <string name="there_is_no_data">There is no data!</string>
    <string name="open_gps">Open GPS!</string>
    <string name="why_open_gps">You must open GPS to supmit request</string>
    <string name="yes_open_gps">Yes, open</string>
    <string name="time_out">Time out!</string>
    <string name="cancel">Cancel</string>
    <string name="cant_get_location">We can\'t get your location</string>
    <string name="try_again">Try again!</string>
    <string name="loading">Loading...</string>
    <string name="confirm">Confirm!</string>
    <string name="are_you_confirm">Are you confirm finishig task</string>
    <string name="ok">Ok</string>
    <string name="done">Done!</string>
    <string name="message_done">You task done success, plz reload page</string>
</resources>
