<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/translation"
            android:icon="@drawable/ic_translate_black_24dp"
            android:title="@string/language" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/exit" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/about_us"
                android:icon="@drawable/ic_error_black_24dp"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
